# ktls

./: .gitignore  CMakeLists.txt
certs/: ecc.crt  ecc.csr  ecc.key  enc.crt  enc.csr  enc.key  sign.crt  sign.csr  sign.key
cmake/: FindKernelHeaders.cmake  FindX86_64Linux.cmake
include/openssl/: configuration.h  opensslv.h
lib64/: libssl.so.3
lib64/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
modules/: CMakeLists.txt  Kbuild  authenc_tls.c  hmac_sm3.c.bak  tls.mod.c  tls_sw.c.0726
patches/: algif_aead_encrypt.patch  algif_aead_patch.patch  linux-6.6.31-ntls-ktls-no-cbc.patch  tls-0624-bak.tgz  tongsuo-8.4.0-ntls-support-ktls-no-cbc.patch
src/: CMakeLists.txt  aead_afalg.c  aead_openssl.c  authenc_sm3_sm4.c  authenctls_afalg.c  authenctls_afalgnew.c  cbc_aes.c  cbc_sm3_sm4.c  client.c  client12.c  client13.c  client_ntls.c  gcm_aes.c  gcm_sm4.c  gcm_sm4_dec.c  gcm_sm4_error.c  server.c  server12.c  server13.c  server_ntls.c  util.h  xor.c
test/: CMakeLists.txt  align.c  client.c  connect.cnf  ntlsc.c  ntlss.c  server.c  stack_of.c
